@@ -1,3 +1,6 @@
+2013-01-29 Graeme Gott <graeme@gottcode.org>
+	* Allow player to scroll board by dragging.
+
 2013-01-28 Graeme Gott <graeme@gottcode.org>
 	* Start game when enter is pressed in new game dialog.
 
